Bug 141924 - tags preview not updated in last image of album
Summary: tags preview not updated in last image of album
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-19 14:12 UTC by Daniel Bauer
Modified: 2012-09-06 11:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Bauer 2007-02-19 14:12:45 UTC
Version:           0.9.1 svn (using KDE KDE 3.5.6)
Installed from:    SuSE RPMs

when selecting/deselecting a tag from right side bar for the *last* image in an album, the tag ist not shown (or removed) with the thumbnail immediately after clicking "apply". After a click in the "thumbnail frame" the new tag is shown/removed tag removed.

This behaviour is *only* for the *last* image in an album. All other images get updated immediately when clicking "apply".
Comment 1 Marcel Wiesweg 2007-02-20 21:52:16 UTC
SVN commit 635761 by mwiesweg:

Also update the last visible item in AlbumIconView
(Daniel, thanks for your very precise bug report)

BUG: 141924


 M  +3 -1      albumiconview.cpp  


--- trunk/extragear/graphics/digikam/digikam/albumiconview.cpp #635760:635761
@@ -1953,7 +1953,7 @@
 {
     AlbumIconItem *firstItem = static_cast<AlbumIconItem *>(findFirstVisibleItem());
     AlbumIconItem *lastItem = static_cast<AlbumIconItem *>(findLastVisibleItem());
-    for (AlbumIconItem *item = firstItem; item && item != lastItem;
+    for (AlbumIconItem *item = firstItem; item;
          item = static_cast<AlbumIconItem *>(item->nextItem()))
     {
         if (item->imageInfo()->id() == imageId)
@@ -1961,6 +1961,8 @@
             updateContents();
             return;
         }
+        if (item == lastItem)
+            break;
     }
 }