Also update the last visible item in AlbumIconView (Daniel, thanks for your very precise bug report)

BUG: 141924

svn path=/trunk/extragear/graphics/digikam/; revision=635761